<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="firs_list_item" type="id"/>
    <item name="second_list_item" type="id"/>
    <item name="web_view" type="id"/>
</resources>