<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/switchLayout"
        android:icon="@drawable/ic_collections_view_as_grid"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/switch_view" />

</menu>
