<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/switchLayout"
        android:icon="@drawable/ic_collections_view_as_grid"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/switch_view" />

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="90"
        android:showAsAction="always|collapseActionView"
        android:title="@android:string/search_go" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_navigation_refresh"
        android:orderInCategory="80"
        android:showAsAction="always"
        android:title="@string/favorites" />

</menu>
